--- a/services/ingest/package.json
+++ b/services/ingest/package.json
@@ -2,9 +2,7 @@
   "name": "dataplattform-ingest",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {
-    "serverless": "^1.49.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "serverless-stack-output": "^0.2.3"
   }
